include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = f-spot
DOC_ENTITIES = 
DOC_INCLUDES = 
DOC_FIGURES =					\
	figures/f-spot-adjust-colors.png	\
	figures/f-spot-autocolor.png		\
	figures/f-spot-crop.png			\
	figures/f-spot-desaturate.png		\
	figures/f-spot-fullscreen.png		\
	figures/f-spot-red-eye.png		\
	figures/f-spot-sepia.png		\
	figures/f-spot-slideshow.png		\
	figures/f-spot-soft-focus.png		\
	figures/f-spot-straighten.png

DOC_LINGUAS = da es fr it oc pt_BR ru sv
