if HAVE_GNOME_DOC_UTILS
include $(top_srcdir)/gnome-doc-utils.make

DOC_ID = f-spot
DOC_INCLUDES =

DOC_PAGES = \
    23hq.page \
    adjust-color.page \
    cd.page \
    colors.page \
    date-search.page \
    enhancements.page \
    extensions.page \
    facebook.page \
    file-management.page \
    flickr.page \
    folder.page \
    general-editing.page \
    import-photos.page \
    import-roll-search.page \
    index.page \
    introduction.page \
    picasa.page \
    rate-search.page \
    ratings.page \
    smugmug.page \
    tag-attach.page \
    tag-creation.page \
    tag-delete.page \
    tag-remove.page \
    tag-search.page \
    tags.page \
    upload-to-web.page \
    versioning.page \
    zooomr.page

DOC_FIGURES = \
    figures/f-spot-adjust-colors.png \
    figures/f-spot-autocolor.png \
    figures/f-spot-crop.png \
    figures/f-spot-desaturate.png \
    figures/f-spot-fullscreen.png \
    figures/f-spot-red-eye.png \
    figures/f-spot-sepia.png \
    figures/f-spot-slideshow.png \
    figures/f-spot-soft-focus.png \
    figures/f-spot-straighten.png

DOC_LINGUAS = de
dist-hook: doc-dist-hook
endif
