# Note the list below is sorted by alphabet, with the exception of libjpegtran,
# it needs to be built before libfspot.

UNCONDITIONAL_SUBDIRS = \
	GKeyFile 			\
	gio-sharp			\
	gnome-keyring-sharp	\
	gtk-sharp-beans		\
	libjpegtran			\
	libfspot			\
	libgphoto2-sharp	\
	semweb				\
	unique-sharp

# dpap-sharp isn't built, but it is shipped.

SUBDIRS = 				\
	$(UNCONDITIONAL_SUBDIRS)

DIST_SUBDIRS = 			\
	dpap-sharp			\
	$(UNCONDITIONAL_SUBDIRS)

