# Note the list below is sorted by alphabet, with the exception of libjpegtran,
# it needs to be built before libfspot. Dpap-sharp isn't built.
SUBDIRS = \
	GKeyFile 			\
	gio-sharp			\
	gtk-sharp-beans		\
	Hyena/src/Hyena     \
	Hyena/src/Mono.Data.Sqlite     \
	Hyena/src/Hyena.Data.Sqlite     \
	Hyena/src/Hyena.Gui     \
	libjpegtran			\
	libfspot			\
	semweb				\
	unique-sharp
